<resources>
    <string name="app_name">Drinkopedia</string>
    <string name="labelType">Cocktail</string>
    <string name="labelTime">Tempo</string>
    <string name="labelIngredients">Ingredienti</string>
    <string name="todo">TODO</string>
    <string name="research_by_name">Cerca per nome</string>
    <string name="alcoholics">Alcolici</string>
    <string name="analcoholics">Analcolici</string>
    <string name="preferred">Preferiti</string>
</resources>