<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CocktailList">


    <LinearLayout
        android:id="@+id/layout_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/research_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:hint="@string/research_by_name"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_filters">

        <Button
            android:id="@+id/showAlcoholics"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="0.4"
            android:backgroundTint="#999999"
            android:text="@string/alcoholics"
            android:textSize="12sp" />

        <Button
            android:id="@+id/showAnalcoholics"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="0.3"
            android:backgroundTint="#5B5B5B"
            android:text="@string/analcoholics"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/buttons_order">

        <Button
            android:id="@+id/Preferred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#659766"
            android:text="@string/preferred" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cocktailList"
            android:layout_width="match_parent"
            android:layout_height="453dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
